# models

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cost-optimization-analysis.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: deploy.yml  index-template.html  neocode.yml  validate.yml
crates/bench/: Cargo.toml
crates/bench/benches/: parsing.rs  search.rs  serialization.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: engine.rs  error.rs  lib.rs  models.rs  parser.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  server.rs
providers/abacus/models/: gemini-2.0-flash-001.toml  gemini-2.0-pro-exp-02-05.toml  gemini-3-pro-preview.toml  gpt-5.2-chat-latest.toml  o3-pro.toml  route-llm.toml
providers/aihubmix/: provider.toml
providers/alibaba-cn/models/: kimi-k2.5.toml
providers/amazon-bedrock/: provider.toml
providers/amazon-bedrock/models/: ai21.jamba-1-5-large-v1:0.toml  ai21.jamba-1-5-mini-v1:0.toml  amazon.nova-lite-v1:0.toml  amazon.nova-micro-v1:0.toml  amazon.nova-pro-v1:0.toml  amazon.titan-text-express-v1.toml  anthropic.claude-3-opus-20240229-v1:0.toml  anthropic.claude-3-sonnet-20240229-v1:0.toml  anthropic.claude-haiku-4-5-20251001-v1:0.toml  anthropic.claude-instant-v1.toml  anthropic.claude-opus-4-5-20251101-v1:0.toml  anthropic.claude-opus-4-6-v1.toml  anthropic.claude-sonnet-4-5-20250929-v1:0.toml  anthropic.claude-v2.toml  anthropic.claude-v2:1.toml  cohere.command-light-text-v14.toml  cohere.command-r-plus-v1:0.toml  cohere.command-r-v1:0.toml  cohere.command-text-v14.toml  deepseek.r1-v1:0.toml  deepseek.v3-v1:0.toml  deepseek.v3.2-v1:0.toml  eu.anthropic.claude-haiku-4-5-20251001-v1:0.toml  eu.anthropic.claude-opus-4-5-20251101-v1:0.toml  eu.anthropic.claude-opus-4-6-v1.toml  eu.anthropic.claude-sonnet-4-5-20250929-v1:0.toml  eu.anthropic.claude-sonnet-4-6.toml  global.anthropic.claude-haiku-4-5-20251001-v1:0.toml  global.anthropic.claude-opus-4-5-20251101-v1:0.toml  global.anthropic.claude-opus-4-6-v1.toml  global.anthropic.claude-sonnet-4-5-20250929-v1:0.toml  global.anthropic.claude-sonnet-4-6.toml  google.gemma-3-27b-it.toml  meta.llama3-70b-instruct-v1:0.toml  meta.llama3-8b-instruct-v1:0.toml  mistral.magistral-small-2509.toml  mistral.ministral-3-14b-instruct.toml  mistral.ministral-3-3b-instruct.toml  mistral.ministral-3-8b-instruct.toml  mistral.mistral-7b-instruct-v0:2.toml  (+22 more)
providers/anthropic/models/: claude-3-5-haiku-20241022.toml  claude-3-5-sonnet-20241022.toml  claude-3-7-sonnet-20250219.toml  claude-3-7-sonnet-latest.toml  claude-3-haiku-20240307.toml  claude-3-opus-20240229.toml  claude-opus-4-20250514.toml  claude-opus-4-6.toml  claude-sonnet-4-20250514.toml  claude-sonnet-4-5-20250929.toml
providers/azure/models/: cohere-command-r-08-2024.toml  cohere-command-r-plus-08-2024.toml  gpt-5.1-chat.toml  gpt-5.1-codex-mini.toml  gpt-5.1-codex.toml  gpt-5.1.toml  gpt-5.2.toml  kimi-k2.5.toml
providers/cloudflare-ai-gateway/: README.md
providers/cohere/models/: c4ai-aya-expanse-32b.toml  c4ai-aya-expanse-8b.toml  c4ai-aya-vision-32b.toml  c4ai-aya-vision-8b.toml
providers/deepseek/: provider.toml
providers/deepseek/models/: deepseek-chat.toml  deepseek-reasoner.toml
providers/firmware/: provider.toml
providers/firmware/models/: glm-5.toml  (+4 more)
providers/free-models/: README.md  provider.toml
providers/gitlab/: provider.toml
providers/jiekou/: provider.toml
providers/neocode/: provider.toml
providers/qiniu-ai/: provider.toml
providers/synthetic/: provider.toml
providers/venice/: README.md
providers/wandb/: provider.toml
providers/zenmux/: provider.toml
(+811 files in other folders)
