[workspace]
members = [
    "crates/core",
    "crates/web",
    "crates/cli",
    "crates/bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Neopilot <team@neopilot.ai>"]
license = "MIT"
repository = "https://github.com/neopilot-ai/models"
homepage = "https://neomodels.vercel.app"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

# Web server dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Validation and schemas
schemars = "0.8"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Performance
rayon = "1.8"
dashmap = "5.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
