[package]
name = "neopilot-models-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Performance benchmarks for Neopilot Models"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "search"
harness = false

[dependencies]
neopilot-models-core = { path = "../core" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde_json = "1.0"
rayon = "1.8"
dashmap = "5.5"
