[package]
name = "neopilot-models-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web server for Neopilot Models database"

[dependencies]
neopilot-models-core = { path = "../core" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
mime = "0.3"
http = "1.0"
